fixes layout shift

--- a/styles/components/fields/droparea.css
+++ b/styles/components/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-  border: 1px dashed var(--stroke-default);
+  border: 2px dashed transparent;
+  outline: 1px dashed var(--stroke-default);
   border-radius: 0.4rem;
 
   display: grid;
@@ -29,6 +30,7 @@
 
   &:hover,
   &:has(input:focus) {
+    outline-width: 0;
     border-width: 2px;
     border-color: var(--stroke-highlight);
     background-color: var(--surface-secondary);
