--- a/styles/components/fields/inputs.css
+++ b/styles/components/fields/inputs.css
@@ -4,7 +4,8 @@ select {
   appearance: none;
   width: 100%;
   border-radius: 0.8rem;
-  border: 1px solid var(--stroke-default);
+  outline: 1px solid var(--stroke-default);
+  border: 0.2rem solid transparent;
   padding: 1.2rem 1.6rem;
   font: var(--text);
 }
@@ -22,7 +23,7 @@ select:focus,
 textarea:focus,
 input[type="date"]:focus-within {
   outline: 0.4rem solid var(--surface-secondary);
-  border: 0.2rem solid var(--stroke-highlight);
+  border-color: var(--stroke-highlight);
   outline-offset: 0.1px;
 }
 
