--- a/styles/components/fields/radio.css
+++ b/styles/components/fields/radio.css
@@ -9,7 +9,8 @@ label + .radio-wrapper {
 }
 
 .radio-inner {
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   border-radius: 0.8rem;
 
   display: grid;
@@ -39,7 +40,7 @@ label + .radio-wrapper {
 
   &:hover,
   &:focus-within {
-    border-color: var(--stroke-highlight);
+    outline-color: var(--stroke-highlight);
 
     & .radio-image {
       background-image: url(../../../assets/icons/radio-hover.svg);
@@ -47,7 +48,8 @@ label + .radio-wrapper {
   }
 
   &:has(:checked) {
-    border: 2px solid var(--stroke-highlight);
+    outline-width: 0;
+    border-color: var(--stroke-highlight);
 
     & .radio-image {
       background-image: url(../../../assets/icons/radio-checked.svg);
